crates/icydb-core/tests/ui/db/persisted_structured_payload_requires_structured_codec.stderr
error[E0277]: the trait bound `CloneDebugOnly: PersistedStructuralValueCodec` is not satisfied
  --> tests/ui/db/persisted_structured_payload_requires_structured_codec.rs:17:54
   |
17 |     let _ = encode_persisted_structured_slot_payload(&value, "broken");
   |             ---------------------------------------- ^^^^^^ unsatisfied trait bound
   |             |
   |             required by a bound introduced by this call
   |
help: the trait `PersistedStructuralValueCodec` is not implemented for `CloneDebugOnly`
  --> tests/ui/db/persisted_structured_payload_requires_structured_codec.rs:7:1
   |
 7 | struct CloneDebugOnly;
   | ^^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `PersistedStructuralValueCodec`:
             BTreeMap<K, V>
             BTreeSet<T>
             Box<T>
             Option<T>
             Vec<T>
             bool
             i128
             i16
           and $N others
note: required by a bound in `encode_persisted_structured_slot_payload`
  --> src/db/data/persisted_row/codec/structured.rs
   |
   | pub fn encode_persisted_structured_slot_payload<T>(
   |        ---------------------------------------- required by a bound in this function
...
   |     T: PersistedStructuralValueCodec,
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `encode_persisted_structured_slot_payload`
